--- a/vue_app_00/package.json
+++ b/vue_app_00/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "mint-ui": "^2.2.9",
+    "vant": "^2.2.2",
+    "vant-weapp": "^1.0.0-beta.0",
     "vue": "^2.5.16",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
