--- a/vue_app_00/package.json
+++ b/vue_app_00/package.json
@@ -12,6 +12,7 @@
     "vant": "^2.2.2",
     "vant-weapp": "^1.0.0-beta.0",
     "vue": "^2.5.16",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
